Revert "Spark sql"

--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pyspark as spark\n",
@@ -34,8 +32,8 @@
     }
    ],
    "source": [
-    "df1=pd.read_csv('/home/manoj/ProjectBigData/Data/tweetsfinal.csv',error_bad_lines=False,engine = 'python',header = None) \n",
-    "df2=pd.read_csv('/home/manoj/ProjectBigData/Data/BitCoinPrice.csv',error_bad_lines=False,engine = 'python',header = None) \n",
+    "df1=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal.csv',error_bad_lines=False,engine = 'python',header = None) \n",
+    "df2=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/BitCoinPrice.csv',error_bad_lines=False,engine = 'python',header = None) \n",
     "FullDataTw=sql.createDataFrame(df1)\n",
     "FullDataBtc=sql.createDataFrame(df2) #creating pandas df and then changing it to pyspark df"
    ]
@@ -349,63 +347,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "FinalTw_avg = FinalTw.select(\"Date_Time\",\"Sentiment_score\").groupBy(\"Date_Time\").agg(avg(col(\"Sentiment_score\")))\n",
-    "FinalTw_avg = FinalTw_avg.selectExpr(\"Date_Time as date\", \"`avg(Sentiment_score)` as score\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root\n",
-      " |-- date: timestamp (nullable = true)\n",
-      " |-- score: double (nullable = true)\n",
+      "+-------------------+-------------------+\n",
+      "|           DateTime|    Sentiment_score|\n",
+      "+-------------------+-------------------+\n",
+      "|2017-11-09 09:00:00|0.09240741625240456|\n",
+      "|2017-11-04 14:00:00|0.11845594881100904|\n",
+      "|2017-11-04 13:00:00| 0.1172484553339806|\n",
+      "|2017-11-02 12:00:00|0.06527885267149504|\n",
+      "|2017-11-07 23:00:00|0.10283782658623176|\n",
+      "+-------------------+-------------------+\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "FinalTw_avg.printSchema()"
+    "# FinalTw_avg = FinalTw.select(\"Date_Time\",\"Sentiment_score\").groupBy(\"Date_Time\").agg(avg(col(\"Sentiment_score\")))\n",
+    "# FinalTw_avg.show()\n",
+    "FinalTw.registerTempTable(\"temp\")\n",
+    "FinalTw_avg = sql.sql(\"SELECT Date_Time As DateTime, AVG(Sentiment_score) As Sentiment_score FROM temp GROUP BY Date_Time\")\n",
+    "FinalTw_avg.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+------------------------------------------+\n",
+      "|          Date_Time|concat_ws( , collect_list(Cleaned_Tweets))|\n",
+      "+-------------------+------------------------------------------+\n",
+      "|2017-11-09 09:00:00|                      Segwit2X died Thi...|\n",
+      "|2017-11-04 14:00:00|                      NEW Roger Ver CEO...|\n",
+      "|2017-11-04 13:00:00|                      Bitcoin prices me...|\n",
+      "|2017-11-02 12:00:00|                      Nice Ethersport a...|\n",
+      "|2017-11-07 23:00:00|                      CME Unveils Bitco...|\n",
+      "+-------------------+------------------------------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import functions as f\n",
+    "df_with_text = FinalTw.groupby(\"Date_Time\").agg(f.concat_ws(\" \", f.collect_list(FinalTw.Cleaned_Tweets)))\n",
+    "df_with_text.show(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# from pyspark.sql import functions as f\n",
-    "# df_with_text = FinalTw.groupby(\"Date_Time\").agg(f.concat_ws(\" \", f.collect_list(FinalTw.Cleaned_Tweets)))\n",
-    "# df_with_text.show(5)\n",
-    "\n",
-    "#Concat the text together for the next round of sentiment analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "211"
+       "236"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,102 +427,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------------+-------------------+-------+\n",
-      "|          Date_Time|    Sentiment_score|  Price|\n",
-      "+-------------------+-------------------+-------+\n",
-      "|2017-10-31 05:00:00|0.09226261767339003|6158.76|\n",
-      "|2017-10-31 06:00:00|0.10376996608248826| 6105.9|\n",
-      "|2017-10-31 07:00:00|0.11169094251431187|6094.36|\n",
-      "|2017-10-31 08:00:00|0.08213433168664136|6125.13|\n",
-      "|2017-10-31 09:00:00|0.08937042968493204| 6165.0|\n",
-      "|2017-10-31 10:00:00|0.10267176426801841|6170.77|\n",
-      "|2017-10-31 11:00:00|0.12814641170317434|6233.74|\n",
-      "|2017-10-31 12:00:00|0.10549754665746006|6201.03|\n",
-      "|2017-10-31 13:00:00|0.13845789734397101|6332.34|\n",
-      "|2017-10-31 14:00:00|0.11779438208175155|6363.13|\n",
-      "|2017-10-31 15:00:00|0.09131997304766154|6365.16|\n",
-      "|2017-10-31 16:00:00|0.09301943334583278|6364.78|\n",
-      "|2017-10-31 17:00:00|0.09206832917391784|6361.79|\n",
-      "|2017-10-31 18:00:00|0.10691324426615845|6335.64|\n",
-      "|2017-10-31 19:00:00|0.12217075088870974|6341.15|\n",
-      "|2017-10-31 20:00:00|0.12817142761147934|6370.08|\n",
-      "|2017-10-31 21:00:00|0.09238581351736849|6393.26|\n",
-      "|2017-10-31 22:00:00|0.10682700448924513|6383.94|\n",
-      "|2017-10-31 23:00:00|0.10207913246967248|6448.36|\n",
-      "|2017-11-01 00:00:00| 0.1003165565658219|6376.49|\n",
-      "+-------------------+-------------------+-------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "FinalTw_avg = FinalTw_avg.join(FinalBtc, FinalTw_avg.date == FinalBtc.Date_Time)\n",
-    "FinalTw_avg = FinalTw_avg.selectExpr('Date_Time', 'score as Sentiment_score', 'Price').sort(asc(\"Date_Time\"))\n",
-    "\n",
-    "# FinalTw_avg.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------------+-------------------+-------+\n",
-      "|          Date_Time|    Sentiment_score|  Price|\n",
-      "+-------------------+-------------------+-------+\n",
-      "|2017-10-31 05:00:00|0.09226261767339003|6158.76|\n",
-      "|2017-10-31 06:00:00|0.10376996608248826| 6105.9|\n",
-      "|2017-10-31 07:00:00|0.11169094251431187|6094.36|\n",
-      "|2017-10-31 08:00:00|0.08213433168664136|6125.13|\n",
-      "|2017-10-31 09:00:00|0.08937042968493204| 6165.0|\n",
-      "|2017-10-31 10:00:00|0.10267176426801841|6170.77|\n",
-      "|2017-10-31 11:00:00|0.12814641170317434|6233.74|\n",
-      "|2017-10-31 12:00:00|0.10549754665746006|6201.03|\n",
-      "|2017-10-31 13:00:00|0.13845789734397101|6332.34|\n",
-      "|2017-10-31 14:00:00|0.11779438208175155|6363.13|\n",
-      "|2017-10-31 15:00:00|0.09131997304766154|6365.16|\n",
-      "|2017-10-31 16:00:00|0.09301943334583278|6364.78|\n",
-      "|2017-10-31 17:00:00|0.09206832917391784|6361.79|\n",
-      "|2017-10-31 18:00:00|0.10691324426615845|6335.64|\n",
-      "|2017-10-31 19:00:00|0.12217075088870974|6341.15|\n",
-      "|2017-10-31 20:00:00|0.12817142761147934|6370.08|\n",
-      "|2017-10-31 21:00:00|0.09238581351736849|6393.26|\n",
-      "|2017-10-31 22:00:00|0.10682700448924513|6383.94|\n",
-      "|2017-10-31 23:00:00|0.10207913246967248|6448.36|\n",
-      "|2017-11-01 00:00:00| 0.1003165565658219|6376.49|\n",
-      "+-------------------+-------------------+-------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "FinalTw_avg = FinalTw_avg.sort(asc(\"Date_Time\"))\n",
-    "\n",
-    "FinalTw_avg.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    "FinalTw_avg.repartition(1).write.csv(\"Two.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
+    "# from pyspark.sql.functions import *\n",
+    "# df_sort = FinalTw_avg.sort(asc(\"Date_Time\"))\n",
+    "# df_sort.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+-------------------+-------------------+-------+\n",
+      "|           DateTime|    Sentiment_score|          Date_Time|  Price|\n",
+      "+-------------------+-------------------+-------------------+-------+\n",
+      "|2017-10-31 05:00:00|0.09226261767339003|2017-10-31 05:00:00|6158.76|\n",
+      "|2017-10-31 06:00:00|0.10376996608248826|2017-10-31 06:00:00| 6105.9|\n",
+      "|2017-10-31 07:00:00|0.11169094251431187|2017-10-31 07:00:00|6094.36|\n",
+      "|2017-10-31 08:00:00|0.08213433168664136|2017-10-31 08:00:00|6125.13|\n",
+      "|2017-10-31 09:00:00|0.08937042968493204|2017-10-31 09:00:00| 6165.0|\n",
+      "+-------------------+-------------------+-------------------+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "FinalTw_avg.registerTempTable(\"avgs\")\n",
+    "FinalBtc.registerTempTable(\"prices\")\n",
+    "results = sql.sql(\"SELECT * FROM avgs JOIN prices ON avgs.DateTime = prices.Date_Time order by avgs.DateTime\")\n",
+    "results.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "211"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.repartition(1).write.csv(\"One.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
    ]
   },
   {
@@ -540,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
