Ipynb with headings

--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pyspark as spark\n",
@@ -16,6 +18,13 @@
     "import re\n",
     "sc = spark.SparkContext()\n",
     "sql = spark.SQLContext(sc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading Datasets of twiiter and Bitcoin prices"
    ]
   },
   {
@@ -48,7 +57,7 @@
      "output_type": "stream",
      "text": [
       "845141\n",
-      "217\n"
+      "673\n"
      ]
     }
    ],
@@ -72,6 +81,13 @@
     "FullDataBtc = FullDataBtc.withColumnRenamed('0', 'DateTime') #setting column names of Bitcoin price dataset\n",
     "FullDataBtc = FullDataBtc.withColumnRenamed('1', 'Price')\n",
     "FullDataBtc = FullDataBtc.filter(FullDataBtc.DateTime != 'Date') #to get rid of first row with the header"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pre-Processing Twitter dataframe"
    ]
   },
   {
@@ -217,8 +233,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pre-Processing Bitcoin dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-------+------------------+\n",
+      "|     DateTime|  Price|  Cleaned_BTC_Time|\n",
+      "+-------------+-------+------------------+\n",
+      "|10/30/17 0:00|6123.21|2017-10-30 0:00:00|\n",
+      "|10/30/17 1:00|6131.35|2017-10-30 1:00:00|\n",
+      "|10/30/17 2:00|6114.17|2017-10-30 2:00:00|\n",
+      "|10/30/17 3:00|6153.11|2017-10-30 3:00:00|\n",
+      "|10/30/17 4:00|6151.09|2017-10-30 4:00:00|\n",
+      "+-------------+-------+------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime \n",
+    "from dateutil import parser\n",
+    "def Btc_Time_format(input_str): #manipulating and casting the strings(DateTime) of BTC dataframe to timestamps\n",
+    "    input_str = re.sub(r'/17','', input_str)\n",
+    "    input_str = '2017-'+ input_str\n",
+    "    input_str = re.sub(r'/', '-', input_str)\n",
+    "    input_str += ':00'\n",
+    "    return input_str[:10]+\"\"+input_str[10:]\n",
+    "func_udf = udf(Btc_Time_format, StringType())\n",
+    "FullDataBtc = FullDataBtc.withColumn('Cleaned_BTC_Time', func_udf(FullDataBtc['DateTime']))\n",
+    "FullDataBtc.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+-------+\n",
+      "|          Date_Time|  Price|\n",
+      "+-------------------+-------+\n",
+      "|2017-10-30 00:00:00|6123.21|\n",
+      "|2017-10-30 01:00:00|6131.35|\n",
+      "|2017-10-30 02:00:00|6114.17|\n",
+      "|2017-10-30 03:00:00|6153.11|\n",
+      "|2017-10-30 04:00:00|6151.09|\n",
+      "+-------------------+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "CleandfBtc = FullDataBtc.withColumn(\"Cleaned_BTC_Time_New\",FullDataBtc['Cleaned_BTC_Time'].cast(TimestampType()))\n",
+    "FinalBtc = CleandfBtc.selectExpr(\"Cleaned_BTC_Time_New as Date_Time\", \"Price\")\n",
+    "FinalBtc = FinalBtc.withColumn(\"Price\",FinalBtc['Price'].cast(DoubleType()))\n",
+    "FinalBtc.show(5)#In this cell, casting to timesstamp, changing col names and casting price type to double"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataframes Look like this..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -239,56 +336,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from datetime import datetime \n",
-    "from dateutil import parser\n",
-    "def Btc_Time_format(input_str): #manipulating and casting the strings(DateTime) of BTC dataframe to timestamps\n",
-    "    input_str = re.sub(r'/17','', input_str)\n",
-    "    input_str = '2017-'+ input_str\n",
-    "    input_str = re.sub(r'/', '-', input_str)\n",
-    "    input_str += ':00'\n",
-    "    return input_str[:10]+\"\"+input_str[10:]\n",
-    "func_udf = udf(Btc_Time_format, StringType())\n",
-    "FullDataBtc = FullDataBtc.withColumn('Cleaned_BTC_Time', func_udf(FullDataBtc['DateTime']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------------+-------+\n",
-      "|          Date_Time|  Price|\n",
-      "+-------------------+-------+\n",
-      "|2017-10-31 00:00:00|6142.46|\n",
-      "|2017-10-31 01:00:00|6139.47|\n",
-      "|2017-10-31 02:00:00| 6128.2|\n",
-      "|2017-10-31 03:00:00|6130.72|\n",
-      "|2017-10-31 04:00:00|6143.92|\n",
-      "+-------------------+-------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "CleandfBtc = FullDataBtc.withColumn(\"Cleaned_BTC_Time_New\",FullDataBtc['Cleaned_BTC_Time'].cast(TimestampType()))\n",
-    "FinalBtc = CleandfBtc.selectExpr(\"Cleaned_BTC_Time_New as Date_Time\", \"Price\")\n",
-    "FinalBtc = FinalBtc.withColumn(\"Price\",FinalBtc['Price'].cast(DoubleType()))\n",
-    "FinalBtc.show(5)#In this cell, casting to timesstamp, changing col names and casting price type to double"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -301,10 +348,28 @@
       " |-- Price: double (nullable = true)\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "672"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "FinalBtc.printSchema()"
+    "FinalBtc.printSchema()\n",
+    "FinalBtc.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Truncating timestamps to hours and then grouping them by hour"
    ]
   },
   {
@@ -369,8 +434,6 @@
     }
    ],
    "source": [
-    "# FinalTw_avg = FinalTw.select(\"Date_Time\",\"Sentiment_score\").groupBy(\"Date_Time\").agg(avg(col(\"Sentiment_score\")))\n",
-    "# FinalTw_avg.show()\n",
     "FinalTw.registerTempTable(\"temp\")\n",
     "FinalTw_avg = sql.sql(\"SELECT Date_Time As DateTime, AVG(Sentiment_score) As Sentiment_score FROM temp GROUP BY Date_Time\")\n",
     "FinalTw_avg.show(5)"
@@ -408,52 +471,42 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "236"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "FinalTw_avg.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# FinalTw_avg.count()\n",
     "# from pyspark.sql.functions import *\n",
     "# df_sort = FinalTw_avg.sort(asc(\"Date_Time\"))\n",
     "# df_sort.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Joining twitter and bitcoin dataframes by DateTime"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------+-------------------+-------------------+-------+\n",
-      "|           DateTime|    Sentiment_score|          Date_Time|  Price|\n",
-      "+-------------------+-------------------+-------------------+-------+\n",
-      "|2017-10-31 05:00:00|0.09226261767339003|2017-10-31 05:00:00|6158.76|\n",
-      "|2017-10-31 06:00:00|0.10376996608248826|2017-10-31 06:00:00| 6105.9|\n",
-      "|2017-10-31 07:00:00|0.11169094251431187|2017-10-31 07:00:00|6094.36|\n",
-      "|2017-10-31 08:00:00|0.08213433168664136|2017-10-31 08:00:00|6125.13|\n",
-      "|2017-10-31 09:00:00|0.08937042968493204|2017-10-31 09:00:00| 6165.0|\n",
-      "+-------------------+-------------------+-------------------+-------+\n",
+      "+-------------------+-------------------+-------+\n",
+      "|           DateTime|    Sentiment_score|  Price|\n",
+      "+-------------------+-------------------+-------+\n",
+      "|2017-10-31 05:00:00|0.09226261767339003|6158.76|\n",
+      "|2017-10-31 06:00:00|0.10376996608248826| 6105.9|\n",
+      "|2017-10-31 07:00:00|0.11169094251431187|6094.36|\n",
+      "|2017-10-31 08:00:00|0.08213433168664136|6125.13|\n",
+      "|2017-10-31 09:00:00|0.08937042968493204| 6165.0|\n",
+      "+-------------------+-------------------+-------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -462,22 +515,22 @@
    "source": [
     "FinalTw_avg.registerTempTable(\"avgs\")\n",
     "FinalBtc.registerTempTable(\"prices\")\n",
-    "results = sql.sql(\"SELECT * FROM avgs JOIN prices ON avgs.DateTime = prices.Date_Time order by avgs.DateTime\")\n",
+    "results = sql.sql(\"SELECT DateTime,Sentiment_score,Price FROM avgs JOIN prices ON avgs.DateTime = prices.Date_Time order by avgs.DateTime\")\n",
     "results.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "211"
+       "235"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,11 +541,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "results.repartition(1).write.csv(\"One.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
+    "#results.repartition(1).write.csv(\"One.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
    ]
   },
   {
